--- a/example.yml
+++ b/example.yml
@@ -1,10 +1,12 @@
 src:
   host: 192.168.1.3
+  port: 3306
   database: test
   username: root
   password: 11111
 dest:
   host: 192.168.1.200
+  port: 5432
   database: test
   username: test
   password: 11111
@@ -15,3 +17,5 @@ tables:
     - select * from test1
   test2:
     - select * from test2
+exclude:
+  operalog
