2023-07-07 v0.1.5 增加全局变量通道处理迁移行数据失败的计数

--- a/example.yml
+++ b/example.yml
@@ -10,8 +10,8 @@ dest:
   database: test
   username: test
   password: 11111
-pageSize: 10000
-maxRows: 10000
+pageSize: 100000
+maxParallel: 30
 tables:
   test1:
     - select * from test1
